--- a/EclipseProg/Scouthis/.project
+++ b/EclipseProg/Scouthis/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>oihoih</name>
+	<name>ginger</name>
 	<comment></comment>
 	<projects>
 	</projects>
