--- a/EclipseProg/Scouthis/bin/AndroidManifest.xml
+++ b/EclipseProg/Scouthis/bin/AndroidManifest.xml
@@ -30,14 +30,14 @@
         android:icon="@drawable/ic_launcher"
         android:theme="@style/Theme.AppCompat" >
 
-        <activity android:name="com.example.android.scoutthisme.MainActivity" android:label="@string/app_name">
+        <activity android:name="it.poli.android.scoutthisme.MainActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name="com.example.android.scoutthisme.CollectionDemoActivity" android:label="@string/demo_collection" />
+        <activity android:name="it.poli.android.scoutthisme.CollectionDemoActivity" android:label="@string/demo_collection" />
 
     </application>
 </manifest>
