--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 *.class
-
-# Package Files #
 *.cache
 *.dex
 *.apk
@@ -10,6 +8,4 @@
 *.jar
 *.war
 *.ear
-EclipseProg/Scouthis/bin/
-EclipseProg/Scouthis/appcompat/
-EclipseProg/Scouthis/gen/
+*.xml
