--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@
 *.jar
 *.war
 *.ear
-EclipseProg/Scouthis/bin/**/
-EclipseProg/Scouthis/gen/**/
+EclipseProg/Scouthis/bin/
+EclipseProg/Scouthis/gen/
