--- a/EclipseProg/Scouthis/AndroidManifest.xml
+++ b/EclipseProg/Scouthis/AndroidManifest.xml
@@ -15,7 +15,7 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.effectivenavigation"
+    package="it.poli.android.scouthisme"
     android:versionCode="1"
     android:versionName="1.0">
 
@@ -24,6 +24,7 @@
     
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:label="@string/app_name"
         android:allowBackup="true"
@@ -38,6 +39,8 @@
         </activity>
 
         <activity android:name="it.poli.android.scoutthisme.CollectionDemoActivity" android:label="@string/demo_collection" />
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+        <activity android:name="com.facebook.LoginActivity"></activity>
 
     </application>
 </manifest>
