--- a/EclipseProg/Scouthis/AndroidManifest.xml
+++ b/EclipseProg/Scouthis/AndroidManifest.xml
@@ -29,7 +29,6 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.CAMERA" />
-
     <uses-feature android:name="android.hardware.camera" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -57,33 +56,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="it.poli.android.scoutthisme.CollectionDemoActivity"
-            android:label="@string/demo_collection" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
 
-        <activity android:name="com.facebook.LoginActivity" >
-        </activity>
+        <activity android:name="com.facebook.LoginActivity" ></activity>
 
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBca0EUxAf56CRckSraGZijeQWpGFfmBco" />
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+        <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyBca0EUxAf56CRckSraGZijeQWpGFfmBco" />
 		
-		<service android:name="it.poli.android.scoutthisme.tools.DownloadService" >
-        </service>
-        
+		<service android:name="it.poli.android.scoutthisme.tools.DownloadService" ></service>
         
         <activity
             android:name="it.poli.android.scoutthisme.tools.FindFriendsActivity"
             android:label="@string/title_activity_login"
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
+        
+        <activity android:name="it.poli.android.scoutthisme.FacebookActivity" android:label="@string/demo_collection" />
     </application>
 
 </manifest>
