Some code clean and bugfixes

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,6 @@
 *.jar
 *.war
 *.ear
-EclipseProg/Scouthis/bin/
+aSupporto/
 EclipseProg/Scouthis/gen/
 EclipseProg/Scouthis/facebook-android-sdk-3.8.0
