--- a/EclipseProg/Scouthis/AndroidManifest.xml
+++ b/EclipseProg/Scouthis/AndroidManifest.xml
@@ -74,7 +74,7 @@
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
         
-        <activity android:name="it.poli.android.scoutthisme.FacebookActivity" android:label="@string/demo_collection" />
+        <activity android:name="it.poli.android.scoutthisme.social.FacebookActivity" android:label="@string/demo_collection" />
     </application>
 
 </manifest>
