Other structure changes

--- a/EclipseProg/Scouthis/AndroidManifest.xml
+++ b/EclipseProg/Scouthis/AndroidManifest.xml
@@ -82,7 +82,7 @@
 		 </receiver>
 		 
 		 <service
-		           android:name="it.poli.android.scoutthisme.social.NotifyFacebookFriendsService"
+		           android:name="it.poli.android.scoutthisme.social.FBNotifyFriendsService"
 		    android:exported="false" />
 		 
 		  <service android:name="it.poli.android.scoutthisme.social.GetFriendsPositionsService" >
