--- a/EclipseProg/Scouthis/AndroidManifest.xml
+++ b/EclipseProg/Scouthis/AndroidManifest.xml
@@ -12,7 +12,7 @@
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
-  limitations under the License.
+  limitations under the License.
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
@@ -29,6 +29,7 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -37,7 +38,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <!--
      The following two permissions are not required to use
-     Google Maps Android API v2, but are recommended.
+     Google Maps Android API v2, but are recommended.
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -61,47 +62,52 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
 
-        <activity android:name="com.facebook.LoginActivity" ></activity>
+        <activity android:name="com.facebook.LoginActivity" >
+        </activity>
 
-        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
-        <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyBca0EUxAf56CRckSraGZijeQWpGFfmBco" />
-		
-		<service android:name="it.poli.android.scoutthisme.tools.DownloadService" ></service>
-        
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBca0EUxAf56CRckSraGZijeQWpGFfmBco" />
+
+        <service android:name="it.poli.android.scoutthisme.tools.DownloadService" >
+        </service>
+
         <activity
             android:name="it.poli.android.scoutthisme.tools.FindFriendsActivity"
             android:label="@string/title_activity_login"
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
-        
-        <activity android:name="it.poli.android.scoutthisme.social.FacebookActivity" 
+        <activity
+            android:name="it.poli.android.scoutthisme.social.FacebookActivity"
             android:label="@string/demo_collection" />
-    	
-        <activity android:name="it.poli.android.scoutthisme.alarm.utils.WakeUpUserActivity">
+        <activity android:name="it.poli.android.scoutthisme.alarm.utils.WakeUpUserActivity" >
         </activity>
-        
-         <receiver
-		    android:name="it.poli.android.scoutthisme.social.FBNotifierAlarmReceiver"
-		    android:process=":remote" >
-		 </receiver>
-		 
-		 <service
-		           android:name="it.poli.android.scoutthisme.social.FBNotifyFriendsService"
-		    android:exported="false" />
-		 
-		  <service android:name="it.poli.android.scoutthisme.social.GetFriendsPositionsService" >
-          </service>
-          
-		  <service android:name="it.poli.android.scoutthisme.alarm.utils.DailyService">
-		  </service>
-    	 
-		  
-    	 <receiver android:name="it.poli.android.scoutthisme.alarm.utils.DailyReceiver"
-    	     android:process=":remote" >
-    	     	  
-    	 </receiver>
-		  
- 
+
+        <receiver
+            android:name="it.poli.android.scoutthisme.social.FBNotifierAlarmReceiver"
+            android:process=":remote" >
+        </receiver>
+
+        <service
+            android:name="it.poli.android.scoutthisme.social.FBNotifyFriendsService"
+            android:exported="false" />
+        <service android:name="it.poli.android.scoutthisme.social.GetFriendsPositionsService" >
+        </service>
+        <service android:name="it.poli.android.scoutthisme.alarm.utils.DailyService" >
+        </service>
+
+        <receiver
+            android:name="it.poli.android.scoutthisme.alarm.utils.DailyReceiver"
+            android:process=":remote" >
+        </receiver>
+
+        <activity
+            android:name="it.poli.android.scouthisme.ProvaTimePicker"
+            android:label="@string/title_activity_prova_time_picker" >
+        </activity>
     </application>
 
 </manifest>
