--- a/EclipseProg/Scouthis/bin/AndroidManifest.xml
+++ b/EclipseProg/Scouthis/bin/AndroidManifest.xml
@@ -52,15 +52,20 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat" >
-        <activity
-            android:name="it.poli.android.scoutthisme.MainActivity"
-            android:label="@string/app_name" >
+        
+          <activity
+          	android:name="it.poli.android.scoutthisme.MainTabsWithIcons"
+          	android:label="@string/app_name" 
+          	android:theme="@style/StyledIndicators">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+	
+        
+        <activity  android:name="it.poli.android.scoutthisme.MainActivity"></activity>
+        
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
