--- a/EclipseProg/Scouthis/bin/AndroidManifest.xml
+++ b/EclipseProg/Scouthis/bin/AndroidManifest.xml
@@ -51,7 +51,7 @@
         android:allowBackup="true"
         android:icon="@drawable/scout_icon"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat" >
+        android:theme="@style/CustomActionBarTheme" >
         <activity
             android:name="it.poli.android.scoutthisme.MainActivityWithIcons"
             android:label="@string/app_name"
