--- a/EclipseProg/Scouthis/AndroidManifest.xml
+++ b/EclipseProg/Scouthis/AndroidManifest.xml
@@ -32,6 +32,10 @@
 
     <uses-feature android:name="android.hardware.camera" />
 
+    <!--  pedometer -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    
+    
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -55,7 +59,7 @@
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme" >
         <activity
-            android:name="it.poli.android.scoutthisme.MainActivityWithIcons"
+            android:name="it.poli.android.scoutthisme.stepreload.stats.Pedometer"
             android:label="@string/app_name"
             android:theme="@style/StyledIndicators"
             android:screenOrientation="portrait" >
@@ -74,6 +78,16 @@
 
         <activity android:name="com.facebook.LoginActivity" >
         </activity>
+        
+        <activity android:name="it.poli.android.scoutthisme.stepreload.stats.Settings"
+                android:label="@string/activity_settings">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
+        
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -91,6 +105,8 @@
         
         <service android:name="it.poli.android.scoutthisme.alarm.utils.MusicService" >
         </service>
+       
+        <service android:name="it.poli.android.scoutthisme.stepreload.stats.StepService"/>
         
         
         
