--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ EclipseProg/Scouthis/gen/
 EclipseProg/Scouthis/facebook-android-sdk-3.8.0
 aSupporto/CustomizedListView/gen/
 EclipseProg/Scouthis/bin/
+EclipseProg/Scouthis/bin/R.txt
